Fix app-focus issues right-clicking on backgrounded browser window. b=416455 r=josh sr=roc a1.9b4=beltzner